--- a/src/utils/styles/custom-properties.css
+++ b/src/utils/styles/custom-properties.css
@@ -1,10 +1,7 @@
 :root {
   --dark-color: #073042;
-  --green-color: #2BE080;
-  --blue-color: #3456F3;
-  --red-color: #FF3055;
-  --grey-one-color: #A0A0A0;
-  --grey-two-color: #F9F9F9;
-  --grey-three-color: #F5F5F5;
-  --grey-four-color: #E8E8E8;
+  --green-color: #2be080;
+  --blue-color: #3456f3;
+  --red-color: #ff3055;
+  --grey-color: #a0a0a0;
 }
