--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,35 +1,117 @@
 .navigation {
   position: relative;
 
+  display: block;
+}
+
+.navigation_opened {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #ffffff;
+}
+
+.navigation__button {
+  position: relative;
+}
+
+.navigation__button_opened {
+  position: absolute;
+  top: 9px;
+  right: 7px;
 }
 
 .navigation__list {
   display: none;
-}
-
-.navigation__list_opened {
-  display: flex;
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
 
-  margin-top: 144px;
+  width: 100%;
+  margin: 0;
+  margin-top: 145px;
+  padding: 0;
+
+  list-style-type: none;
+}
+
+.navigation__list_opened {
+  display: flex;
 }
 
 .navigation__item {
-  margin-right: 24px;
+  margin-bottom: 24px;
+}
+
+.navigation__item:last-child {
+  margin-bottom: 0;
+}
+
+.navigation__link {
+  color: #000000;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: calc(22 / 18);
+}
+
+.navigation__link_active {
+  position: relative;
+}
+
+.navigation__link_active::after {
+  position: absolute;
+  top: 29px;
+  left: 0;
+
+  display: block;
+
+  width: 100%;
+
+  content: '';
+
+  border: 1px solid #000000;
 }
 
 .navigation__profile {
   display: none;
+
+  margin-top: 444px;
+  padding: 8px 22px;
+
+  cursor: pointer;
+  transition: background-color 0.5s;
+  text-align: center;
+  text-decoration: none;
+
+  color: #000000;
+  border-radius: 20px;
+  background-color: rgba(249, 249, 249, 1);
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: calc(16 / 14);
 }
 
-.navigation__profile__opened {
+.navigation__profile:hover {
+  transition: background-color 0.1s;
+
+  opacity: 1;
+  background-color: rgba(249, 249, 249, 0.8);
+}
+
+.navigation__profile_opened {
   display: block;
 }
 
@@ -50,17 +132,15 @@
 
   .navigation__list {
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
-    flex-wrap: nowrap;
 
-    margin: 0;
-    padding: 0;
-
-    list-style-type: none;
+    margin-top: 0;
   }
 
   .navigation__item {
     margin-right: 20px;
+    margin-bottom: 0;
   }
 
   .navigation__item:last-child {
@@ -68,10 +148,6 @@
   }
 
   .navigation__link {
-    text-align: right;
-
-    color: #000000;
-
     font-size: 14px;
     font-weight: 400;
     line-height: calc(18 / 14);
@@ -81,23 +157,15 @@
     font-weight: 500;
   }
 
+  .navigation__link_active::after {
+    display: none;
+  }
+
   .navigation__profile {
     display: block;
 
+    margin-top: 0;
     margin-left: 50px;
-    padding: 8px 20px;
-
-    cursor: pointer;
-    transition: background-color 0.5s;
-    text-decoration: none;
-
-    color: #000000;
-    border-radius: 20px;
-    background-color: rgba(249, 249, 249, 1);
-
-    font-size: 14px;
-    font-weight: 500;
-    line-height: calc(16 / 14);
   }
 
   .navigation__profile:hover {
