--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -86,6 +86,12 @@
 
 @media screen and (min-width: 600px) {
   .movies-card__image {
+    aspect-ratio: calc(339 / 190);
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .movies-card__image {
     aspect-ratio: calc(270 / 151);
   }
 }
