--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,7 @@
 
   box-sizing: border-box;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
 
   color: #000000;
   background-color: #ffffff;
