--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -85,6 +85,10 @@
   line-height: calc(17 / 14);
 }
 
+.about-me__link:visited {
+  color: #000000;
+}
+
 @media screen and (min-width: 600px) {
   .about-me {
     padding: 91px 50px 90px;
