--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -41,6 +41,8 @@
 .navigation__button {
   position: relative;
 
+  height: 38px;
+
   transition: opacity 0.5s;
 
   opacity: 1;
@@ -153,7 +155,7 @@
   }
 
   .navigation__list_opened {
-   margin-top: 159px;
+    margin-top: 159px;
   }
 
   .navigation__item {
