style: fix background color

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -94,7 +94,7 @@
 }
 
 .about-project__timeline-term_type_frontend {
-  background-color: #d0d0d0;
+  background-color: #F2F2F2;
 }
 
 .about-project__timeline-description {
