--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -72,16 +72,45 @@
 
 .search-form__shorts-wrapper {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: row-reverse;
   flex-wrap: nowrap;
 
-  margin-top: 43px;
+  width: min-content;
+  margin: 43px auto 0;
 }
 
-.search-form__shorts-button {
+.search-form__shorts-input, .search-form__shorts-input:checked {
+  position: absolute;
+
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip-path: inset(100%);
+}
+
+.search-form__shorts-input:focus {
+  outline: none;
+}
+
+.search-form__shorts-input:focus-visible {
+  outline: 3px solid var(--blue-color);
+  outline-offset: 3px;
+}
+
+.search-form__shorts-checkbox {
   position: relative;
+
+  display: inline-block;
 
   width: 34px;
   height: 14px;
@@ -92,11 +121,11 @@
   background-color: #ebebeb;
 }
 
-.search-form__shorts-button:hover {
+.search-form__shorts-checkbox:hover {
   background-color: rgba(235, 235, 235, 0.8);
 }
 
-.search-form__shorts-button::after {
+.search-form__shorts-checkbox::after {
   position: absolute;
   top: 2px;
   right: 2px;
@@ -111,23 +140,23 @@
   background-color: #f5f5f5;
 }
 
-.search-form__shorts-button__selected {
+.search-form__shorts-checkbox_selected {
   transition: background-color 0.2s;
 
   background-color: var(--green-color);
 }
 
-.search-form__shorts-button__selected:hover {
+.search-form__shorts-checkbox_selected:hover {
   background-color: rgba(43, 224, 128, 0.8);
 }
 
-.search-form__shorts-button__selected::after {
+.search-form__shorts-checkbox_selected::after {
   right: 22px;
 
   background-color: #ffffff;
 }
 
-.search-form__shorts-text {
+.search-form__shorts-label {
   margin-left: 13px;
 
   color: #000000;
@@ -161,7 +190,7 @@
     margin-top: 42px;
   }
 
-  .search-form__shorts-text {
+  .search-form__shorts-label {
     font-size: 14px;
     line-height: calc(18 / 14);
   }
