--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -80,55 +80,48 @@
   margin: 43px auto 0;
 }
 
-.search-form__shorts-input, .search-form__shorts-input:checked {
-  position: absolute;
-
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-
-  white-space: nowrap;
-
-  border: 0;
-
-  clip-path: inset(100%);
-}
-
-.search-form__shorts-input:focus {
-  outline: none;
-}
-
-.search-form__shorts-input:focus-visible {
-  outline: 3px solid var(--blue-color);
-  outline-offset: 3px;
-}
-
-.search-form__shorts-checkbox {
+.search-form__shorts-input {
   position: relative;
 
-  display: inline-block;
+  display: block;
 
   width: 34px;
   height: 14px;
 
+  transition: opacity 0.5s;
+
+  opacity: 1;
+}
+
+.search-form__shorts-input:hover {
+  transition: opacity 0.1s;
+
+  opacity: 0.8;
+}
+
+.search-form__shorts-input::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: block;
+
+  width: 34px;
+  height: 14px;
+
+  content: '';
+  cursor: pointer;
   transition: background-color 0.2s;
 
+  border: none;
   border-radius: 14px;
   background-color: #ebebeb;
 }
 
-.search-form__shorts-checkbox:hover {
-  background-color: rgba(235, 235, 235, 0.8);
-}
-
-.search-form__shorts-checkbox::after {
+.search-form__shorts-input::after {
   position: absolute;
   top: 2px;
-  right: 2px;
+  right: 22px;
 
   width: 10px;
   height: 10px;
@@ -140,18 +133,16 @@
   background-color: #f5f5f5;
 }
 
-.search-form__shorts-checkbox_selected {
+.search-form__shorts-input:checked::before {
   transition: background-color 0.2s;
 
   background-color: var(--green-color);
 }
 
-.search-form__shorts-checkbox_selected:hover {
-  background-color: rgba(43, 224, 128, 0.8);
-}
+.search-form__shorts-input:checked::after {
+  right: 2px;
 
-.search-form__shorts-checkbox_selected::after {
-  right: 22px;
+  transition: background-color 0.2s, right 0.2s;
 
   background-color: #ffffff;
 }
