--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,88 +1,125 @@
 @keyframes preloader-inside-white {
   0% {
+            transform: scale(0, 0);
+
     -webkit-transform: scale(0, 0);
-    -moz-transform: scale(0, 0);
-    -ms-transform: scale(0, 0);
-    -o-transform: scale(0, 0);
-    transform: scale(0, 0);
+       -moz-transform: scale(0, 0);
+        -ms-transform: scale(0, 0);
+         -o-transform: scale(0, 0);
   }
+
   100% {
+            transform: scale(1, 1);
+
     -webkit-transform: scale(1, 1);
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    -o-transform: scale(1, 1);
-    transform: scale(1, 1);
+       -moz-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+         -o-transform: scale(1, 1);
   }
 }
 
 @keyframes preloader-inside-red {
   0% {
+            transform: scale(0, 0);
+
     -webkit-transform: scale(0, 0);
-    -moz-transform: scale(0, 0);
-    -ms-transform: scale(0, 0);
-    -o-transform: scale(0, 0);
-    transform: scale(0, 0);
+       -moz-transform: scale(0, 0);
+        -ms-transform: scale(0, 0);
+         -o-transform: scale(0, 0);
   }
+
   30% {
+            transform: scale(0, 0);
+
     -webkit-transform: scale(0, 0);
-    -moz-transform: scale(0, 0);
-    -ms-transform: scale(0, 0);
-    -o-transform: scale(0, 0);
-    transform: scale(0, 0);
+       -moz-transform: scale(0, 0);
+        -ms-transform: scale(0, 0);
+         -o-transform: scale(0, 0);
   }
+
   100% {
+            transform: scale(1, 1);
+
     -webkit-transform: scale(1, 1);
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    -o-transform: scale(1, 1);
-    transform: scale(1, 1);
+       -moz-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+         -o-transform: scale(1, 1);
   }
 }
 
 .preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+
   width: 100%;
   height: 100%;
-  z-index: 10;
   padding: 20px;
 }
 
+.preloader::after {
+  position: absolute;
+
+  display: block;
+
+  width: 100%;
+  height: 100%;
+
+  content: '';
+
+  opacity: 0.2;
+  background-color: #000000;
+}
+
 .preloader__container {
+  position: relative;
+  z-index: 1;
+
   width: 100px;
   height: 100px;
-  position: relative;
 }
 
 .preloader__round {
-  width: 100px;
-  height: 100px;
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
-  background: var(--red-color);
+
+  width: 100px;
+  height: 100px;
+
   border-radius: 50px;
+  background: var(--red-color);
 }
 
-.preloader__round::after,
-.preloader__round::before {
-  content: '';
-  width: 100px;
-  height: 100px;
+.preloader__round::after, .preloader__round::before {
   position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
+
+  width: 100px;
+  height: 100px;
+
+  content: '';
+
   border-radius: 50px;
 }
 
 .preloader__round::after {
-  background: white;
   animation: preloader-inside-white 1s ease-in-out infinite;
+
+  background: white;
 }
 
 .preloader__round::before {
   z-index: 10;
-  background: var(--red-color);
+
   animation: preloader-inside-red 1s ease-in-out infinite;
+
+  background: var(--red-color);
 }
