--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -21,3 +21,13 @@
   outline: 3px solid var(--blue-color);
   outline-offset: 3px;
 }
+
+.input-error {
+  margin-top: 13px;
+}
+
+@media screen and (min-width: 600px) {
+  .input-error {
+    margin-top: 15px;
+  }
+}
