style: fix disabled state

--- a/src/components/ProfileData/ProfileData.css
+++ b/src/components/ProfileData/ProfileData.css
@@ -153,7 +153,8 @@
 }
 
 .profile-data__submit-button:disabled {
-  background-color: rgba(52, 86, 243, 0.5);
+  color: #c2c2c2;
+  background-color: #f8f8f8;
 }
 
 @media screen and (min-width: 600px) {
