fix: remove logout when the logged in user goes to the home page, fix the color of the navigation text.

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -219,6 +219,14 @@
     display: none;
   }
 
+  .navigation__link_color_white {
+    color: #ffffff;
+  }
+
+  .navigation__link_color_white:visited {
+    color: #ffffff;
+  }
+
   .navigation__profile {
     display: block;
 
